--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  sponomics88
 # disqus_shortname: rmsubekti
 
-google_analytics: UA-124XXXXX-XX
-google_site_verification : McHopQXXXXQKRCXXXXX3XXXOXXXX
+google_analytics: UA-149434135-1
+google_site_verification : NhioUZUQK7rlbefjPLQA2HoLNMmd9dTlYnTcGHkA-QA
 cse_id : 010xxxxxxx00xxxxxxxx:v_uiprmpwme
 
 logo: /assets/icons/512.png
