--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,18 @@
 #
 
 # Name of your site (displayed in the header)
-name: sponomics88
+name: 스포츠 데이터 분석
 
 # Short bio or description (displayed in the header)
-description: 스포츠 데이터 센터
+description: 스포츠 데이터 분석
 
 #
 # Flags below are optional
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/aweekj/kiko-now/master/images/jekyll-logo.png
+avatar: ./images/img_ai.png 
+# https://raw.githubusercontent.com/aweekj/kiko-now/master/images/jekyll-logo.png
 
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
