--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: 스포츠 데이터 분석
+name: Sports Analtytics
 
 # Short bio or description (displayed in the header)
 description: 스포츠 데이터 분석
@@ -23,8 +23,6 @@ avatar: ./images/img_ai.png
 navigation:
   - name: Blog
     url: /
-  - name: About
-    url: /about
   - name: Archive
     url: /archive
  
@@ -51,7 +49,7 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # Text under the icons in footer
-footer-text: © 2019 sponomics88
+footer-text: © 2019 spototocenter
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
