--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Sports Analtytics
+name: Sports AI
 
 # Short bio or description (displayed in the header)
 description: 스포츠 데이터 분석
@@ -13,7 +13,7 @@ description: 스포츠 데이터 분석
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: ./images/img_ai.png 
+avatar: /images/img_ai.png 
 # https://raw.githubusercontent.com/aweekj/kiko-now/master/images/jekyll-logo.png
 
 
@@ -28,7 +28,7 @@ navigation:
  
 
 # Pagination
-paginate: 5
+paginate: 10
 
 # Includes an icon in the footer for each username you enter
 footer-links:
