--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: spototocenter.github.io
+  github: spototocenter
   googleplus: # anything in your profile username that comes after plus.google.com/
   instagram:
   linkedin:
